force-app/main/default/objects/Margin_Policy__mdt/Margin_Policy__mdt.object-meta.xml
<CustomObject>
    <description>Gross margin floor and the discount thresholds that decide which approval level a deal needs. Configuration, not code: moving a threshold is editing a record.</description>
    <label>Margin Policy</label>
    <pluralLabel>Margin Policies</pluralLabel>
</CustomObject>