force-app/main/default/objects/Margin_Policy__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the margin engine considers this policy.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>