force-app/main/default/objects/Margin_Policy__mdt/fields/Deal_Desk_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Threshold__c</fullName>
    <description>Discount above policy beyond which the Deal Desk has to approve.</description>
    <label>Deal Desk Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>