force-app/main/default/objects/Margin_Policy__mdt/fields/Director_Approval_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Director_Approval_Threshold__c</fullName>
    <description>Discount above policy beyond which the Regional Director has to approve.</description>
    <label>Director Approval Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>