force-app/main/default/objects/Margin_Policy__mdt/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <description>First day the policy applies.</description>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>