force-app/main/default/objects/Margin_Policy__mdt/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <description>Last day the policy applies. Empty means no end date.</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>