force-app/main/default/objects/Margin_Policy__mdt/fields/Manager_Approval_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval_Threshold__c</fullName>
    <description>Discount above policy beyond which the Sales Manager has to approve.</description>
    <label>Manager Approval Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>