force-app/main/default/objects/Margin_Policy__mdt/fields/Min_Gross_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Min_Gross_Margin_Percent__c</fullName>
    <description>Margin floor. A line or deal below it is flagged and needs approval regardless of the discount percentage.</description>
    <label>Minimum Gross Margin Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>